# unified-ccl

./: CMakeLists.txt
bindings/python/: CMakeLists.txt  uccl_bindings.cc
bindings/python/uccl/: __init__.py  uccl.py
desgin/: code_review.md  design-spec.md  env.md  optimizations.md  proxy-design.md  proxy.md  test.md
docs/: README.md
plugins/ucx/: CMakeLists.txt  plugin.cc
src/: CMakeLists.txt  bootstrap.cc  channel.cc  collectives.cc  enqueue.cc  group.cc  init.cc  proxy.cc  transport.cc
src/algorithms/: algorithm.h  copy_engine.cc  one_shot.cc  ring.cc  symmetric.cc  symmetric_context.h
src/device/: common_kernel.hpp  op128.hpp  primitives.hpp  reduce_kernel.hpp
src/include/: channel.h  comm.h  fifo.h  hw_resources.h  uccl.h  uccl_common.h  uccl_net.h
src/misc/: debug.cc  debug.h  utils.cc
src/plugin/: net_plugin.h  net_ucx.cc
src/protocols/: ll128.cc  protocol.h  simple.cc
src/rma/: rma.cc  rma.h  rma_device.hpp
src/topo/: topo.h  topo_pci.cc  topo_ring.cc  topo_upi.cc
src/transport/: net.cc  p2p.cc  transport.h
tests/: CMakeLists.txt
tests/cpp/: CMakeLists.txt  test_allreduce.cc  test_transport.cc
tests/python/: test_allreduce.py  test_perf.py
